--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,96 +1,94 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+    font-family: 'Montserrat', serif;
+    font-optical-sizing: auto;
+    font-style: normal;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100dvh;
+    background-color: hwb(271 2% 53%);
+    padding: 1rem;
+}
+.config-container {
+    background-color: hwb(0 99% 0%);
+    width: 415px;
+    padding: 1.5rem;
+    text-align: center;
+    border-radius: 0.5rem;
+    box-shadow: 0 10px 25px hwb(0 17% 83% / 0.226);
+}
+.config-container .config-title {
+    font-size: 1.31rem;
+}
+.config-container .config-option {
+    margin-top: 2rem;
+}
+.config-option .option-title {
+    font-size: 1.125rem;
+    font-weight: 500;
+    margin-bottom: 20px;
+}
+.config-option .category-options {
+    display: grid;
+    gap: 15px;
+    grid-template-columns: repeat(2, 2fr);
+}
+.config-option .questions-options {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 12px;
+    padding: 0 30px;
+    justify-content: center;
+}
+.questions-options button {
+    flex: 1 1 10%;
+    transition: 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
+
+    &:hover {
+        background-color: hwb(248 84% 1%);
+    }
+}
+.config-option button.active  { 
+    color: hwb(271 2% 53%);
+    border-color: hwb(271 2% 53%);
+    background-color: hwb(248 84% 1%);
+
+}
+.config-option button {
+    padding: 0.6rem;
+    font-size: 0.938rem;
+    font-weight: 500;
+    background-color: hwb(0 99% 0%);
+    border: 1px solid hwb(271 2% 53%);
+    border-radius: 0.5rem;
+    cursor: pointer;
+
+    &:hover {
+        background-color: hwb(248 84% 1%);
+    }
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #3178c6aa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.config-container .star-quizt-button { 
+    color: hwb(0 99% 0%);
+    border: none;
+    background-color: hwb(271 2% 53%);
+    cursor: pointer;
+    margin-top: 30px;
+    padding: 13px 25px ;
+    border-radius: .5rem;
+    font-size: .9rem;
+    font-weight: 500;
+    transition: background 300ms ease;
+    &:hover { 
+        background-color: hwb(271 3% 74%);
+    }
 }
