--- a/src/css/index.css
+++ b/src/css/index.css
@@ -57,11 +57,10 @@ body {
         background-color: hwb(248 84% 1%);
     }
 }
-.config-option button.active  { 
+.config-option button.active {
     color: hwb(271 2% 53%);
     border-color: hwb(271 2% 53%);
     background-color: hwb(248 84% 1%);
-
 }
 .config-option button {
     padding: 0.6rem;
@@ -77,18 +76,19 @@ body {
     }
 }
 
-.config-container .star-quizt-button { 
+.config-container .star-quizt-button {
     color: hwb(0 99% 0%);
     border: none;
     background-color: hwb(271 2% 53%);
     cursor: pointer;
     margin-top: 30px;
-    padding: 13px 25px ;
-    border-radius: .5rem;
-    font-size: .9rem;
+    padding: 13px 25px;
+    border-radius: 0.5rem;
+    font-size: 0.9rem;
     font-weight: 500;
     transition: background 300ms ease;
-    &:hover { 
+    
+    &:hover {
         background-color: hwb(271 3% 74%);
     }
 }
