workin on quiz result

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -25,6 +25,7 @@ body {
     background-color: hwb(0 99% 0%);
 }
 .config-container {
+    display: block;
     width: 415px;
     padding: 1.5rem;
     text-align: center;
