--- a/src/css/quiz.css
+++ b/src/css/quiz.css
@@ -92,8 +92,9 @@
 
 .quiz-footer .next-question-button {
     display: inline-flex;
-    visibility: visible;
+
+    visibility: hidden;
     gap: 0.5rem;
     align-items: center;
-    padding: 9px 17px;
+    padding: 9px 30px;
 }
